[gd_scene load_steps=19 format=4 uid="uid://74m786xnde7v"]

[ext_resource type="Texture2D" uid="uid://bnrm515w0qaed" path="res://Placeholder Sprites/placeholdertileset.png" id="1_013lu"]
[ext_resource type="Script" path="res://scripts/back_room.gd" id="1_twi6r"]
[ext_resource type="PackedScene" uid="uid://w6cigjklhxi4" path="res://scenes/player.tscn" id="2_3kc8a"]
[ext_resource type="Texture2D" uid="uid://dtwct7pg1hopp" path="res://Sprites/Grocery_Store_Tile_Map.png" id="2_j2ade"]
[ext_resource type="PackedScene" uid="uid://p7s6p7twu46w" path="res://Interaction/Interaction area/interaction_area.tscn" id="4_jm8m2"]
[ext_resource type="AudioStream" uid="uid://kims08xn7iar" path="res://sfx/water drop sfx.mp3" id="6_qvfle"]
[ext_resource type="AudioStream" uid="uid://ds6t7put7jjwj" path="res://sfx/air conditioner sfx (w compressor sound).mp3" id="7_7ewsg"]
[ext_resource type="Script" path="res://scripts/item_interact.gd" id="8_nyl8s"]
[ext_resource type="Script" path="res://inventory/inventory_item.gd" id="9_h4vqk"]
[ext_resource type="Texture2D" uid="uid://dyopbiwlai6k7" path="res://Placeholder Sprites/invicons/boxcutter.png" id="10_nl3kx"]

[sub_resource type="GDScript" id="GDScript_wqeyt"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jpjyx"]
texture = ExtResource("2_j2ade")
texture_region_size = Vector2i(32, 32)
0:2/size_in_atlas = Vector2i(1, 3)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -48, 16, -48, 16, 48, -16, 48)
1:2/size_in_atlas = Vector2i(1, 3)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -48, 16, -48, 16, 48, -16, 48)
4:2/size_in_atlas = Vector2i(3, 3)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-48, -48, 48, -48, 48, 48, 16, 48, 16, 16, -16, 16, -16, 48, -48, 48)
0:0/0 = 0
1:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:0/0 = 0
4:0/0 = 0
3:0/0 = 0
2:0/0 = 0
0:1/0 = 0
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:6/0 = 0
3:6/0 = 0
2:7/0 = 0
3:7/0 = 0
3:8/0 = 0
2:8/0 = 0
2:9/0 = 0
3:9/0 = 0
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-13.25, -16, 16, -16, 16, 16, -13, 16)
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-13.25, -16, 16, -16, 16, 16, -13, 16)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(13.25, 16, -16, 16, -16, -16, 13, -16)
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 14.5, -16, 14.25, 16, -16, 16)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(13.25, 16, -16, 16, -16, -16, 13, -16)
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, -14.5, 16, -14.25, -16, 16, -16)
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, -14.5, 16, -14.25, -16, 16, -16)
1:9/0 = 0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 14.5, -16, 14.25, 16, -16, 16)
0:10/0 = 0
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-13.75, -12, 16, -11.75, 16, 16, -13.75, 16)
0:11/0 = 0
0:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-13.75, 8.75, -13.5, -16, 16, -16, 16, 8.75)
1:11/0 = 0
1:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(13.75, 9, -16, 9, -16, -16, 14, -16)
1:10/0 = 0
1:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(14, -11.75, 13.5, 16, -16, 16, -16, -11.75)
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
11:11/0 = 0
10:11/0 = 0
9:11/0 = 0
8:11/0 = 0
7:11/0 = 0
6:11/0 = 0
5:11/0 = 0
4:11/0 = 0
3:11/0 = 0
2:11/0 = 0
5:8/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
7:8/0 = 0
6:8/0 = 0
11:7/size_in_atlas = Vector2i(1, 3)
11:7/0 = 0
11:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(16.2757, 49.9496, -16.2757, 49.3883, -15.749, -47.247, 0.629959, -47.877, 1.25993, -16, 16, -16)
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
2:5/0 = 0
3:5/0 = 0
9:9/0 = 0
8:8/0 = 0
9:8/0 = 0
10:9/0 = 0
10:8/0 = 0
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qby3v"]
texture = ExtResource("1_013lu")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_2mulk"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
sources/4 = SubResource("TileSetAtlasSource_qby3v")
sources/0 = SubResource("TileSetAtlasSource_jpjyx")

[sub_resource type="CircleShape2D" id="CircleShape2D_ltrs8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b3w3x"]
size = Vector2(8.71935, 18.5286)

[sub_resource type="Resource" id="Resource_m6vnp"]
script = ExtResource("9_h4vqk")
name = "Boxcutter"
texture = ExtResource("10_nl3kx")

[sub_resource type="CircleShape2D" id="CircleShape2D_eh01w"]
radius = 23.0

[node name="backRoom" type="Node2D"]
script = ExtResource("1_twi6r")

[node name="TileMap" type="Node" parent="."]
script = SubResource("GDScript_wqeyt")

[node name="FloorLayer" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAAAAAIAAAADAAAAAAAAAAMAAAADAAAAAAAAAAQAAAADAAAAAAAAAAUAAAADAAAAAAAAAAYAAAADAAAAAAABAAIAAAADAAAAAAABAAMAAAADAAAAAAABAAQAAAADAAAAAAABAAUAAAADAAAAAAABAAYAAAADAAAAAAACAAIAAAADAAAAAAACAAMAAAADAAAAAAACAAQAAAADAAAAAAACAAUAAAADAAAAAAACAAYAAAADAAAAAAADAAIAAAADAAAAAAADAAMAAAADAAAAAAADAAQAAAADAAAAAAADAAUAAAADAAAAAAADAAYAAAADAAAAAAAEAAIAAAADAAAAAAAEAAMAAAADAAAAAAAEAAQAAAADAAAAAAAEAAUAAAADAAAAAAAEAAYAAAADAAAAAAAFAAIAAAADAAAAAAAFAAMAAAADAAAAAAAFAAQAAAADAAAAAAAFAAUAAAADAAAAAAAFAAYAAAADAAAAAAAGAAIAAAADAAAAAAAGAAMAAAADAAAAAAAGAAQAAAADAAAAAAAGAAUAAAADAAAAAAAGAAYAAAADAAAAAAAHAAIAAAADAAAAAAAHAAMAAAADAAAAAAAHAAQAAAADAAAAAAAHAAUAAAADAAAAAAAHAAYAAAADAAAAAAAIAAIAAAADAAAAAAAIAAMAAAADAAAAAAAIAAQAAAADAAAAAAAIAAUAAAADAAAAAAAIAAYAAAADAAAAAAAJAAIAAAADAAAAAAAJAAMAAAADAAAAAAAJAAQAAAADAAAAAAAJAAUAAAADAAAAAAAJAAYAAAADAAAAAAAKAAIAAAADAAAAAAAKAAMAAAADAAAAAAAKAAQAAAADAAAAAAAKAAUAAAADAAAAAAAKAAYAAAADAAAAAAALAAIAAAADAAAAAAALAAMAAAADAAAAAAALAAQAAAADAAAAAAALAAUAAAADAAAAAAALAAYAAAADAAAAAAAMAAIAAAADAAAAAAAMAAMAAAADAAAAAAAMAAQAAAADAAAAAAAMAAUAAAADAAAAAAAMAAYAAAADAAAAAAANAAIAAAADAAAAAAANAAMAAAADAAAAAAANAAQAAAADAAAAAAANAAUAAAADAAAAAAANAAYAAAADAAAAAAAOAAIAAAADAAAAAAAOAAMAAAADAAAAAAAOAAQAAAADAAAAAAAOAAUAAAADAAAAAAAOAAYAAAADAAAAAAAPAAIAAAADAAAAAAAPAAMAAAADAAAAAAAPAAQAAAADAAAAAAAPAAUAAAADAAAAAAAPAAYAAAADAAAAAAAQAAIAAAADAAAAAAAQAAMAAAADAAAAAAAQAAQAAAADAAAAAAAQAAUAAAADAAAAAAAQAAYAAAADAAAAAAARAAIAAAADAAAAAAARAAMAAAADAAAAAAARAAQAAAADAAAAAAARAAUAAAADAAAAAAARAAYAAAADAAAAAAASAAIAAAADAAAAAAASAAMAAAADAAAAAAASAAQAAAADAAAAAAASAAUAAAADAAAAAAASAAYAAAADAAAAAAATAAIAAAADAAAAAAATAAMAAAADAAAAAAATAAQAAAADAAAAAAATAAUAAAADAAAAAAATAAYAAAADAAAAAAAUAAIAAAADAAAAAAAUAAMAAAADAAAAAAAUAAQAAAADAAAAAAAUAAUAAAADAAAAAAAUAAYAAAADAAAAAAAVAAIAAAADAAAAAAAVAAMAAAADAAAAAAAVAAQAAAADAAAAAAAVAAUAAAADAAAAAAAVAAYAAAADAAAAAAAWAAIAAAADAAAAAAAWAAMAAAADAAAAAAAWAAQAAAADAAAAAAAWAAUAAAADAAAAAAAWAAYAAAADAAAAAAAXAAIAAAADAAAAAAAXAAMAAAADAAAAAAAXAAQAAAADAAAAAAAXAAUAAAADAAAAAAAXAAYAAAADAAAAAAAYAAIAAAADAAAAAAAYAAMAAAADAAAAAAAYAAQAAAADAAAAAAAYAAUAAAADAAAAAAAYAAYAAAADAAAAAAAZAAIAAAADAAAAAAAZAAMAAAADAAAAAAAZAAQAAAADAAAAAAAZAAUAAAADAAAAAAAZAAYAAAADAAAAAAAaAAIAAAADAAAAAAAaAAMAAAADAAAAAAAaAAQAAAADAAAAAAAaAAUAAAADAAAAAAAaAAYAAAADAAAAAAAbAAIAAAADAAAAAAAbAAMAAAADAAAAAAAbAAQAAAADAAAAAAAbAAUAAAADAAAAAAAbAAYAAAADAAAAAAAcAAIAAAADAAAAAAAcAAMAAAADAAAAAAAcAAQAAAADAAAAAAAcAAUAAAADAAAAAAAcAAYAAAADAAAAAAAdAAIAAAADAAAAAAAdAAMAAAADAAAAAAAdAAQAAAADAAAAAAAdAAUAAAADAAAAAAAdAAYAAAADAAAAAAAeAAIAAAADAAAAAAAeAAMAAAADAAAAAAAeAAQAAAADAAAAAAAeAAUAAAADAAAAAAAeAAYAAAADAAAAAAAfAAIAAAADAAAAAAAfAAMAAAADAAAAAAAfAAQAAAADAAAAAAAfAAUAAAADAAAAAAAfAAYAAAADAAAAAAAgAAIAAAADAAAAAAAgAAMAAAADAAAAAAAgAAQAAAADAAAAAAAgAAUAAAADAAAAAAAgAAYAAAADAAAAAAAhAAIAAAADAAAAAAAhAAMAAAADAAAAAAAhAAQAAAADAAAAAAAhAAUAAAADAAAAAAAhAAYAAAADAAAAAAAiAAIAAAADAAAAAAAiAAMAAAADAAAAAAAiAAQAAAADAAAAAAAiAAUAAAADAAAAAAAiAAYAAAADAAAAAAAjAAIAAAADAAAAAAAjAAMAAAADAAAAAAAjAAQAAAADAAAAAAAjAAUAAAADAAAAAAAjAAYAAAADAAAAAAAkAAIAAAADAAAAAAAkAAMAAAADAAAAAAAkAAQAAAADAAAAAAAkAAUAAAADAAAAAAAkAAYAAAADAAAAAAAJAAcAAAADAAAAAAAKAAcAAAADAAAAAAAXAAcAAAADAAAAAAAYAAcAAAADAAAAAAA=")
tile_set = SubResource("TileSet_2mulk")

[node name="WallLayer" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAAFAAAAAAACAAMAAAAFAAEAAAACAAQAAAAGAAAAAAADAAMAAAAGAAEAAAADAAQAAAAkAAAAAAAAAAIAAAAAAAAAAAAAAAIAAAABAAAAAAAEAAIAAAACAAAAAAAAAAIAAAADAAAAAAAAAAIAAAAEAAAAAAAAAAIAAAAFAP//AAACAAIAAAAGAP//AAADAAIAAAAHAAAAAAAAAAIAAAAIAAAAAAAAAAIAAAAJAAAAAAAAAAIAAAAKAAAAAAAAAAIAAAALAAAAAAAAAAIAAAAMAAAAAAAAAAIAAAANAAAAAAAAAAIAAAAOAAAAAAAAAAIAAAAPAAAAAAAAAAIAAAAQAAAAAAAAAAIAAAARAAAAAAAAAAIAAAASAAAAAAAAAAIAAAATAAAAAAAAAAIAAAAUAAAAAAAAAAIAAAAVAAAAAAAAAAIAAAAWAAAAAAAAAAIAAAAXAAAAAAAAAAIAAAAYAAAAAAAAAAIAAAAZAAAAAAAAAAIAAAAaAAAAAAAAAAIAAAAbAAAAAAAAAAIAAAAcAAAAAAAAAAIAAAAdAAAAAAAAAAIAAAAeAAAAAAAAAAIAAAAfAAAAAAAAAAIAAAAgAAAAAAAAAAIAAAAhAAAAAAAAAAIAAAAiAAAAAAABAAIAAAAjAAAAAAAAAAIAAAA=")
tile_set = SubResource("TileSet_2mulk")

[node name="FloorItems" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAAAAAQABAAAAAAAAAAAAAUABAAAAAAAAAABAAYABAAAAAAAAAACAAYABAAAAAAAAAADAAYABAAAAAAAAAAFAAYABAADAAEAAAAGAAYABAADAAEAAAAHAAYABAADAAEAAAAIAAIABAADAAEAAAAJAAIABAADAAEAAAAKAAIABAADAAEAAAALAAIABAADAAEAAAAMAAYAAAAAAAoAAAANAAIAAAAAAAsAAAANAAYAAAABAAoAAAAOAAIAAAABAAsAAAAOAAYAAAAAAAoAAAAPAAIAAAAAAAsAAAAPAAYAAAABAAoAAAAQAAIAAAABAAsAAAAQAAYAAAAAAAoAAAARAAIAAAAAAAsAAAARAAYAAAABAAoAAAASAAIAAAABAAsAAAASAAYAAAAAAAoAAAATAAIAAAAAAAsAAAATAAYAAAABAAoAAAAUAAIAAAABAAsAAAAUAAYABAAAAAAAAAAVAAIAAAAAAAsAAAAVAAYABAAAAAAAAAAWAAIAAAABAAsAAAAXAAIAAAAAAAsAAAAYAAIAAAABAAsAAAAZAAIAAAAAAAsAAAAaAAIAAAABAAsAAAAaAAYAAAAAAAoAAAAbAAIAAAAAAAsAAAAbAAYAAAABAAoAAAAcAAIAAAABAAsAAAAcAAYAAAAAAAoAAAAdAAIAAAAAAAsAAAAdAAYAAAABAAoAAAAeAAIAAAABAAsAAAAeAAYAAAAAAAoAAAAfAAYAAAAAAAoAAAAgAAYAAAABAAoAAAAhAAYAAAAAAAoAAAAiAAYAAAABAAoAAAAJAAcAAAACAAUAAAAKAAcAAAADAAUAAAAXAAcAAAACAAUAAAAYAAcAAAADAAUAAAA=")
tile_set = SubResource("TileSet_2mulk")

[node name="Ceiling" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAD6//z/AAAHAAAAAAD6//3/AAAHAAAAAAD6//7/AAAHAAAAAAD6////AAAHAAAAAAD6/wAAAAAHAAAAAAD6/wEAAAAHAAAAAAD6/wIAAAAHAAAAAAD6/wMAAAAHAAAAAAD6/wQAAAAHAAAAAAD6/wUAAAAHAAAAAAD6/wYAAAAHAAAAAAD6/wcAAAAHAAAAAAD6/wgAAAAHAAAAAAD6/wkAAAAHAAAAAAD6/woAAAAHAAAAAAD6/wsAAAAHAAAAAAD6/wwAAAAHAAAAAAD7//z/AAAHAAAAAAD7//3/AAAHAAAAAAD7//7/AAAHAAAAAAD7////AAAHAAAAAAD7/wAAAAAHAAAAAAD7/wEAAAAHAAAAAAD7/wIAAAAHAAAAAAD7/wMAAAAHAAAAAAD7/wQAAAAHAAAAAAD7/wUAAAAHAAAAAAD7/wYAAAAHAAAAAAD7/wcAAAAHAAAAAAD7/wgAAAAHAAAAAAD7/wkAAAAHAAAAAAD7/woAAAAHAAAAAAD7/wsAAAAHAAAAAAD7/wwAAAAHAAAAAAD8//z/AAAHAAAAAAD8//3/AAAHAAAAAAD8//7/AAAHAAAAAAD8////AAAHAAAAAAD8/wAAAAAHAAAAAAD8/wEAAAAHAAAAAAD8/wIAAAAHAAAAAAD8/wMAAAAHAAAAAAD8/wQAAAAHAAAAAAD8/wUAAAAHAAAAAAD8/wYAAAAHAAAAAAD8/wcAAAAHAAAAAAD8/wgAAAAHAAAAAAD8/wkAAAAHAAAAAAD8/woAAAAHAAAAAAD8/wsAAAAHAAAAAAD8/wwAAAAHAAAAAAD9//z/AAAHAAAAAAD9//3/AAAHAAAAAAD9//7/AAAHAAAAAAD9////AAAHAAAAAAD9/wAAAAAHAAAAAAD9/wEAAAAHAAAAAAD9/wIAAAAHAAAAAAD9/wMAAAAHAAAAAAD9/wQAAAAHAAAAAAD9/wUAAAAHAAAAAAD9/wYAAAAHAAAAAAD9/wcAAAAHAAAAAAD9/wgAAAAHAAAAAAD9/wkAAAAHAAAAAAD9/woAAAAHAAAAAAD9/wsAAAAHAAAAAAD9/wwAAAAHAAAAAAD+//z/AAAHAAAAAAD+//3/AAAHAAAAAAD+//7/AAAHAAAAAAD+////AAAHAAAAAAD+/wAAAAAHAAAAAAD+/wEAAAAHAAAAAAD+/wIAAAAHAAAAAAD+/wMAAAAHAAAAAAD+/wQAAAAHAAAAAAD+/wUAAAAHAAAAAAD+/wYAAAAHAAAAAAD+/wcAAAAHAAAAAAD+/wgAAAAHAAAAAAD+/wkAAAAHAAAAAAD+/woAAAAHAAAAAAD+/wsAAAAHAAAAAAD+/wwAAAAHAAAAAAD///z/AAAHAAAAAAD///3/AAAHAAAAAAD///7/AAAHAAAAAAD/////AAAGAAEAAGD//wAAAAAGAAEAAGD//wEAAAAGAAEAAGD//wIAAAAGAAEAAGD//wMAAAAGAAEAAGD//wQAAAAGAAEAAGD//wUAAAAGAAEAAGD//wYAAAAGAAEAAGD//wcAAAAHAAEAADD//wgAAAAHAAAAAAD//wkAAAAHAAAAAAD//woAAAAHAAAAAAD//wsAAAAHAAAAAAD//wwAAAAHAAAAAAAAAPz/AAAHAAAAAAAAAP3/AAAHAAAAAAAAAP7/AAAHAAAAAAAAAAcAAAAGAAEAADAAAAgAAAAHAAAAAAAAAAkAAAAHAAAAAAAAAAoAAAAHAAAAAAAAAAsAAAAHAAAAAAAAAAwAAAAHAAAAAAABAPz/AAAHAAAAAAABAP3/AAAHAAAAAAABAP7/AAAHAAAAAAABAAcAAAAGAAEAADABAAgAAAAHAAAAAAABAAkAAAAHAAAAAAABAAoAAAAHAAAAAAABAAsAAAAHAAAAAAABAAwAAAAHAAAAAAACAPz/AAAHAAAAAAACAP3/AAAHAAAAAAACAP7/AAAHAAAAAAACAAcAAAAGAAEAADACAAgAAAAHAAAAAAACAAkAAAAHAAAAAAACAAoAAAAHAAAAAAACAAsAAAAHAAAAAAACAAwAAAAHAAAAAAADAPz/AAAHAAAAAAADAP3/AAAHAAAAAAADAP7/AAAHAAAAAAADAAcAAAAGAAEAADADAAgAAAAHAAAAAAADAAkAAAAHAAAAAAADAAoAAAAHAAAAAAADAAsAAAAHAAAAAAADAAwAAAAHAAAAAAAEAPz/AAAHAAAAAAAEAP3/AAAHAAAAAAAEAP7/AAAHAAAAAAAEAAcAAAAGAAEAADAEAAgAAAAHAAAAAAAEAAkAAAAHAAAAAAAEAAoAAAAHAAAAAAAEAAsAAAAHAAAAAAAEAAwAAAAHAAAAAAAFAPz/AAAHAAAAAAAFAP3/AAAHAAAAAAAFAP7/AAAHAAAAAAAFAAcAAAAGAAEAADAFAAgAAAAHAAAAAAAFAAkAAAAHAAAAAAAFAAoAAAAHAAAAAAAFAAsAAAAHAAAAAAAFAAwAAAAHAAAAAAAGAPz/AAAHAAAAAAAGAP3/AAAHAAAAAAAGAP7/AAAHAAAAAAAGAAcAAAAGAAEAADAGAAgAAAAHAAAAAAAGAAkAAAAHAAAAAAAGAAoAAAAHAAAAAAAGAAsAAAAHAAAAAAAGAAwAAAAHAAAAAAAHAPz/AAAHAAAAAAAHAP3/AAAHAAAAAAAHAP7/AAAHAAAAAAAHAAcAAAAGAAEAADAHAAgAAAAHAAAAAAAHAAkAAAAHAAAAAAAHAAoAAAAHAAAAAAAHAAsAAAAHAAAAAAAHAAwAAAAHAAAAAAAIAPz/AAAHAAAAAAAIAP3/AAAHAAAAAAAIAP7/AAAHAAAAAAAIAAcAAAAGAAAAAGAIAAgAAAAHAAEAADAIAAkAAAAHAAAAAAAIAAoAAAAHAAAAAAAIAAsAAAAHAAAAAAAIAAwAAAAHAAAAAAAJAPz/AAAHAAAAAAAJAP3/AAAHAAAAAAAJAP7/AAAHAAAAAAAJAAgAAAAGAAEAADAJAAkAAAAHAAAAAAAJAAoAAAAHAAAAAAAJAAsAAAAHAAAAAAAJAAwAAAAHAAAAAAAKAPz/AAAHAAAAAAAKAP3/AAAHAAAAAAAKAP7/AAAHAAAAAAAKAAgAAAAGAAEAADAKAAkAAAAHAAAAAAAKAAoAAAAHAAAAAAAKAAsAAAAHAAAAAAAKAAwAAAAHAAAAAAALAPz/AAAHAAAAAAALAP3/AAAHAAAAAAALAP7/AAAHAAAAAAALAAcAAAAGAAAAADALAAgAAAAHAAEAAFALAAkAAAAHAAAAAAALAAoAAAAHAAAAAAALAAsAAAAHAAAAAAALAAwAAAAHAAAAAAAMAPz/AAAHAAAAAAAMAP3/AAAHAAAAAAAMAP7/AAAHAAAAAAAMAAcAAAAGAAEAADAMAAgAAAAHAAAAAAAMAAkAAAAHAAAAAAAMAAoAAAAHAAAAAAAMAAsAAAAHAAAAAAAMAAwAAAAHAAAAAAANAPz/AAAHAAAAAAANAP3/AAAHAAAAAAANAP7/AAAHAAAAAAANAAcAAAAGAAEAADANAAgAAAAHAAAAAAANAAkAAAAHAAAAAAANAAoAAAAHAAAAAAANAAsAAAAHAAAAAAANAAwAAAAHAAAAAAAOAPz/AAAHAAAAAAAOAP3/AAAHAAAAAAAOAP7/AAAHAAAAAAAOAAcAAAAGAAEAADAOAAgAAAAHAAAAAAAOAAkAAAAHAAAAAAAOAAoAAAAHAAAAAAAOAAsAAAAHAAAAAAAOAAwAAAAHAAAAAAAPAPz/AAAHAAAAAAAPAP3/AAAHAAAAAAAPAP7/AAAHAAAAAAAPAAcAAAAGAAEAADAPAAgAAAAHAAAAAAAPAAkAAAAHAAAAAAAPAAoAAAAHAAAAAAAPAAsAAAAHAAAAAAAPAAwAAAAHAAAAAAAQAPz/AAAHAAAAAAAQAP3/AAAHAAAAAAAQAP7/AAAHAAAAAAAQAAcAAAAGAAEAADAQAAgAAAAHAAAAAAAQAAkAAAAHAAAAAAAQAAoAAAAHAAAAAAAQAAsAAAAHAAAAAAAQAAwAAAAHAAAAAAARAPz/AAAHAAAAAAARAP3/AAAHAAAAAAARAP7/AAAHAAAAAAARAAcAAAAGAAEAADARAAgAAAAHAAAAAAARAAkAAAAHAAAAAAARAAoAAAAHAAAAAAARAAsAAAAHAAAAAAARAAwAAAAHAAAAAAASAPz/AAAHAAAAAAASAP3/AAAHAAAAAAASAP7/AAAHAAAAAAASAAcAAAAGAAEAADASAAgAAAAHAAAAAAASAAkAAAAHAAAAAAASAAoAAAAHAAAAAAASAAsAAAAHAAAAAAASAAwAAAAHAAAAAAATAPz/AAAHAAAAAAATAP3/AAAHAAAAAAATAP7/AAAHAAAAAAATAAcAAAAGAAEAADATAAgAAAAHAAAAAAATAAkAAAAHAAAAAAATAAoAAAAHAAAAAAATAAsAAAAHAAAAAAATAAwAAAAHAAAAAAAUAPz/AAAHAAAAAAAUAP3/AAAHAAAAAAAUAP7/AAAHAAAAAAAUAAcAAAAGAAEAADAUAAgAAAAHAAAAAAAUAAkAAAAHAAAAAAAUAAoAAAAHAAAAAAAUAAsAAAAHAAAAAAAUAAwAAAAHAAAAAAAVAPz/AAAHAAAAAAAVAP3/AAAHAAAAAAAVAP7/AAAHAAAAAAAVAAcAAAAGAAEAADAVAAgAAAAHAAAAAAAVAAkAAAAHAAAAAAAVAAoAAAAHAAAAAAAVAAsAAAAHAAAAAAAVAAwAAAAHAAAAAAAWAPz/AAAHAAAAAAAWAP3/AAAHAAAAAAAWAP7/AAAHAAAAAAAWAAcAAAAGAAAAAGAWAAgAAAAHAAEAADAWAAkAAAAHAAAAAAAWAAoAAAAHAAAAAAAWAAsAAAAHAAAAAAAWAAwAAAAHAAAAAAAXAPz/AAAHAAAAAAAXAP3/AAAHAAAAAAAXAP7/AAAHAAAAAAAXAAgAAAAGAAEAADAXAAkAAAAHAAAAAAAXAAoAAAAHAAAAAAAXAAsAAAAHAAAAAAAXAAwAAAAHAAAAAAAYAPz/AAAHAAAAAAAYAP3/AAAHAAAAAAAYAP7/AAAHAAAAAAAYAAgAAAAGAAEAADAYAAkAAAAHAAAAAAAYAAoAAAAHAAAAAAAYAAsAAAAHAAAAAAAYAAwAAAAHAAAAAAAZAPz/AAAHAAAAAAAZAP3/AAAHAAAAAAAZAP7/AAAHAAAAAAAZAAcAAAAGAAAAADAZAAgAAAAHAAEAAFAZAAkAAAAHAAAAAAAZAAoAAAAHAAAAAAAZAAsAAAAHAAAAAAAZAAwAAAAHAAAAAAAaAPz/AAAHAAAAAAAaAP3/AAAHAAAAAAAaAP7/AAAHAAAAAAAaAAcAAAAGAAEAADAaAAgAAAAHAAAAAAAaAAkAAAAHAAAAAAAaAAoAAAAHAAAAAAAaAAsAAAAHAAAAAAAaAAwAAAAHAAAAAAAbAPz/AAAHAAAAAAAbAP3/AAAHAAAAAAAbAP7/AAAHAAAAAAAbAAcAAAAGAAEAADAbAAgAAAAHAAAAAAAbAAkAAAAHAAAAAAAbAAoAAAAHAAAAAAAbAAsAAAAHAAAAAAAbAAwAAAAHAAAAAAAcAPz/AAAHAAAAAAAcAP3/AAAHAAAAAAAcAP7/AAAHAAAAAAAcAAcAAAAGAAEAADAcAAgAAAAHAAAAAAAcAAkAAAAHAAAAAAAcAAoAAAAHAAAAAAAcAAsAAAAHAAAAAAAcAAwAAAAHAAAAAAAdAPz/AAAHAAAAAAAdAP3/AAAHAAAAAAAdAP7/AAAHAAAAAAAdAAcAAAAGAAEAADAdAAgAAAAHAAAAAAAdAAkAAAAHAAAAAAAdAAoAAAAHAAAAAAAdAAsAAAAHAAAAAAAdAAwAAAAHAAAAAAAeAPz/AAAHAAAAAAAeAP3/AAAHAAAAAAAeAP7/AAAHAAAAAAAeAAcAAAAGAAEAADAeAAgAAAAHAAAAAAAeAAkAAAAHAAAAAAAeAAoAAAAHAAAAAAAeAAsAAAAHAAAAAAAeAAwAAAAHAAAAAAAfAPz/AAAHAAAAAAAfAP3/AAAHAAAAAAAfAP7/AAAHAAAAAAAfAAcAAAAGAAEAADAfAAgAAAAHAAAAAAAfAAkAAAAHAAAAAAAfAAoAAAAHAAAAAAAfAAsAAAAHAAAAAAAfAAwAAAAHAAAAAAAgAPz/AAAHAAAAAAAgAP3/AAAHAAAAAAAgAP7/AAAHAAAAAAAgAAcAAAAGAAEAADAgAAgAAAAHAAAAAAAgAAkAAAAHAAAAAAAgAAoAAAAHAAAAAAAgAAsAAAAHAAAAAAAgAAwAAAAHAAAAAAAhAPz/AAAHAAAAAAAhAP3/AAAHAAAAAAAhAP7/AAAHAAAAAAAhAAcAAAAGAAEAADAhAAgAAAAHAAAAAAAhAAkAAAAHAAAAAAAhAAoAAAAHAAAAAAAhAAsAAAAHAAAAAAAhAAwAAAAHAAAAAAAiAPz/AAAHAAAAAAAiAP3/AAAHAAAAAAAiAP7/AAAHAAAAAAAiAAcAAAAGAAEAADAiAAgAAAAHAAAAAAAiAAkAAAAHAAAAAAAiAAoAAAAHAAAAAAAiAAsAAAAHAAAAAAAiAAwAAAAHAAAAAAAjAPz/AAAHAAAAAAAjAP3/AAAHAAAAAAAjAP7/AAAHAAAAAAAjAAcAAAAGAAEAADAjAAgAAAAHAAAAAAAjAAkAAAAHAAAAAAAjAAoAAAAHAAAAAAAjAAsAAAAHAAAAAAAjAAwAAAAHAAAAAAAkAPz/AAAHAAAAAAAkAP3/AAAHAAAAAAAkAP7/AAAHAAAAAAAkAAcAAAAGAAEAADAkAAgAAAAHAAAAAAAkAAkAAAAHAAAAAAAkAAoAAAAHAAAAAAAkAAsAAAAHAAAAAAAkAAwAAAAHAAAAAAAlAPz/AAAHAAAAAAAlAP3/AAAHAAAAAAAlAP7/AAAHAAAAAAAlAP//AAAGAAEAAFAlAAAAAAAGAAEAAFAlAAEAAAAGAAEAAFAlAAIAAAAGAAEAAFAlAAMAAAAGAAEAAFAlAAQAAAAGAAEAAFAlAAUAAAAGAAEAAFAlAAYAAAAGAAEAAFAlAAcAAAAHAAEAAFAlAAgAAAAHAAAAAAAlAAkAAAAHAAAAAAAlAAoAAAAHAAAAAAAlAAsAAAAHAAAAAAAlAAwAAAAHAAAAAAAmAPz/AAAHAAAAAAAmAP3/AAAHAAAAAAAmAP7/AAAHAAAAAAAmAP//AAAHAAAAAAAmAAAAAAAHAAAAAAAmAAEAAAAHAAAAAAAmAAIAAAAHAAAAAAAmAAMAAAAHAAAAAAAmAAQAAAAHAAAAAAAmAAUAAAAHAAAAAAAmAAYAAAAHAAAAAAAmAAcAAAAHAAAAAAAmAAgAAAAHAAAAAAAmAAkAAAAHAAAAAAAmAAoAAAAHAAAAAAAmAAsAAAAHAAAAAAAmAAwAAAAHAAAAAAAnAPz/AAAHAAAAAAAnAP3/AAAHAAAAAAAnAP7/AAAHAAAAAAAnAP//AAAHAAAAAAAnAAAAAAAHAAAAAAAnAAEAAAAHAAAAAAAnAAIAAAAHAAAAAAAnAAMAAAAHAAAAAAAnAAQAAAAHAAAAAAAnAAUAAAAHAAAAAAAnAAYAAAAHAAAAAAAnAAcAAAAHAAAAAAAnAAgAAAAHAAAAAAAnAAkAAAAHAAAAAAAnAAoAAAAHAAAAAAAnAAsAAAAHAAAAAAAnAAwAAAAHAAAAAAAoAPz/AAAHAAAAAAAoAP3/AAAHAAAAAAAoAP7/AAAHAAAAAAAoAP//AAAHAAAAAAAoAAAAAAAHAAAAAAAoAAEAAAAHAAAAAAAoAAIAAAAHAAAAAAAoAAMAAAAHAAAAAAAoAAQAAAAHAAAAAAAoAAUAAAAHAAAAAAAoAAYAAAAHAAAAAAAoAAcAAAAHAAAAAAAoAAgAAAAHAAAAAAAoAAkAAAAHAAAAAAAoAAoAAAAHAAAAAAAoAAsAAAAHAAAAAAAoAAwAAAAHAAAAAAApAPz/AAAHAAAAAAApAP3/AAAHAAAAAAApAP7/AAAHAAAAAAApAP//AAAHAAAAAAApAAAAAAAHAAAAAAApAAEAAAAHAAAAAAApAAIAAAAHAAAAAAApAAMAAAAHAAAAAAApAAQAAAAHAAAAAAApAAUAAAAHAAAAAAApAAYAAAAHAAAAAAApAAcAAAAHAAAAAAApAAgAAAAHAAAAAAApAAkAAAAHAAAAAAApAAoAAAAHAAAAAAApAAsAAAAHAAAAAAApAAwAAAAHAAAAAAAqAPz/AAAHAAAAAAAqAP3/AAAHAAAAAAAqAP7/AAAHAAAAAAAqAP//AAAHAAAAAAAqAAAAAAAHAAAAAAAqAAEAAAAHAAAAAAAqAAIAAAAHAAAAAAAqAAMAAAAHAAAAAAAqAAQAAAAHAAAAAAAqAAUAAAAHAAAAAAAqAAYAAAAHAAAAAAAqAAcAAAAHAAAAAAAqAAgAAAAHAAAAAAAqAAkAAAAHAAAAAAAqAAoAAAAHAAAAAAAqAAsAAAAHAAAAAAAqAAwAAAAHAAAAAAA=")
tile_set = SubResource("TileSet_2mulk")

[node name="ShelfItems" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAAaAAYAAAAEAAoAAAAbAAYAAAAFAAoAAAAcAAYAAAAGAAoAAAAdAAYAAAAHAAoAAAAfAAYAAAAEAAoAAAAgAAYAAAAFAAoAAAAhAAYAAAAEAAoAAAAiAAYAAAAFAAoAAAAeAAYAAAAIAAoAAAAdAAIAAAAIAAsAAAAeAAIAAAAJAAsAAAAbAAIAAAAIAAsAAAAcAAIAAAAJAAsAAAAZAAIAAAAIAAsAAAAaAAIAAAAJAAsAAAAXAAIAAAAKAAsAAAAYAAIAAAALAAsAAAAVAAIAAAAKAAsAAAAWAAIAAAALAAsAAAATAAIAAAAKAAsAAAAUAAIAAAALAAsAAAARAAIAAAAGAAsAAAASAAIAAAAHAAsAAAAPAAIAAAAGAAsAAAAQAAIAAAAHAAsAAAANAAIAAAAGAAsAAAAOAAIAAAAHAAsAAAAMAAYAAAACAAoAAAANAAYAAAADAAoAAAAOAAYAAAACAAoAAAAPAAYAAAADAAoAAAAQAAYAAAAKAAoAAAARAAYAAAALAAoAAAASAAYAAAAEAAoAAAATAAYAAAAFAAoAAAA=")
tile_set = SubResource("TileSet_2mulk")

[node name="Player" parent="." instance=ExtResource("2_3kc8a")]
z_index = 1
position = Vector2(148, 75)

[node name="DoorLInteract" parent="." instance=ExtResource("4_jm8m2")]
z_index = 4
position = Vector2(317, 238)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorLInteract"]
position = Vector2(2, 8)
scale = Vector2(5.505, 5.505)
shape = SubResource("CircleShape2D_ltrs8")

[node name="DoorRInteract" parent="." instance=ExtResource("4_jm8m2")]
z_index = 4
position = Vector2(767, 239)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorRInteract"]
position = Vector2(2, 8)
scale = Vector2(5.505, 5.505)
shape = SubResource("CircleShape2D_ltrs8")

[node name="StairsInteract" parent="." instance=ExtResource("4_jm8m2")]
z_index = 4
position = Vector2(47, 26)
action_name = "ascend stairs"

[node name="CollisionShape2D" type="CollisionShape2D" parent="StairsInteract"]
position = Vector2(-1, -10)
scale = Vector2(5.505, 5.505)
shape = SubResource("RectangleShape2D_b3w3x")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qvfle")
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_7ewsg")
autoplay = true

[node name="DarkerTint" type="ColorRect" parent="."]
z_index = 2
offset_left = 1456.0
offset_top = 546.0
offset_right = 1685.0
offset_bottom = 653.0
scale = Vector2(-6.765, -6.765)
color = Color(0, 0, 0, 0.588235)

[node name="Boxcutter" type="Node2D" parent="." node_paths=PackedStringArray("interaction")]
position = Vector2(383, -121)
script = ExtResource("8_nyl8s")
item = SubResource("Resource_m6vnp")
interaction = NodePath("BoxcutterInteract")

[node name="BoxcutterInteract" parent="Boxcutter" instance=ExtResource("4_jm8m2")]
z_index = 1
position = Vector2(720, 210)
action_name = "pickup boxcutter"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boxcutter/BoxcutterInteract"]
shape = SubResource("CircleShape2D_eh01w")

[node name="Sprite2D" type="Sprite2D" parent="Boxcutter"]
z_index = 1
position = Vector2(720, 210)
texture = ExtResource("10_nl3kx")
